[tool.poetry]
name = "Brain-Games-JohnEdition"
version = "0.6.2"
description = ""
authors = ["johnalt"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
